# oHySEM

./: CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml
doc/rst/: ContactUs.rst  Download.rst  InputData.rst  Introduction.rst  MathematicalFormulation.rst  OutputResults.rst  Papers.rst  Projects.rst  conf.py  index.rst  requirements.txt
oHySEM/: API.py  API2.py  API3.py  API4.py  __init__.py  oHySEM.py  oHySEM_API.py
oHySEM/VPP1/: oH_Data_Duration_VPP1.csv  oH_Data_ElectricityCost_VPP1.csv  oH_Data_ElectricityPrice_VPP1.csv  oH_Data_Generation_VPP1.csv  oH_Data_HydrogenDemand_VPP1.csv  oH_Data_HydrogenNetwork_VPP1.csv  oH_Data_HydrogenPrice_VPP1.csv  oH_Data_HydrogenSchedule_VPP1.csv  oH_Data_NodeLocation_VPP1.csv  oH_Data_OperatingReserveRequire_VPP1.csv  oH_Data_Parameter_VPP1.csv  oH_Data_Period_VPP1.csv  oH_Data_Tariff_VPP1.csv  oH_Data_VarMaxGeneration_VPP1.csv  oH_Data_VarMinStorage_VPP1.csv  oH_Dict_Circuit_VPP1.csv  oH_Dict_ElectricityGeneration_VPP1.csv  oH_Dict_Hour_VPP1.csv  oH_Dict_HydrogenGeneration_VPP1.csv  oH_Dict_LoadLevelToHour_VPP1.csv  oH_Dict_LoadLevel_VPP1.csv  oH_Dict_NodeToZone_VPP1.csv  oH_Dict_Segment_VPP1.csv  oH_Dict_Storage_VPP1.csv  oH_Dict_Technology_VPP1.csv  oH_Result_rElectricityBalance_VPP1.csv  oH_Result_rElectricityNetworkFlows_VPP1.csv  oH_Result_rElectricityTechnologyGeneration_VPP1.csv  oH_Result_rHydrogenBalance_VPP1.csv  oH_Result_rHydrogenNetworkFlows_VPP1.csv  oH_Result_rReservesOffers_VPP1.csv  oH_Result_rTotalCost_VPP1.csv
oHySEM/sSEP/: oH_Data_Duration_sSEP.csv  oH_Data_ElectricityCost_sSEP.csv  (+21 more)
(+19 files in other folders)
